--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd https://workingcopy.app/git/#path=actions/setup-node/server.js&repo=https://jimjonesbabyfreshout%2540gmail.com@github.com/jimjonesbabyfreshout/github.io.git
+            cd actions/setup-node/server.js
             node server.js
