--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
+          username: jimjonesbabyfreshout@github.com
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd actions/setup-node/server.js
