--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,59 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+# Workflow for deploying static content to GitHub Pages
+
+name: Deploy to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Trigger on pushes to the main branch
   push:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Manual trigger from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Check out the repository
       - name: Checkout
         uses: actions/checkout@v3
+
+      # Step 2: Prepare environment
+      - name: Setup Environment
+        run: npm install  # Example for Node.js projects
+
+      # Step 3: Run tests
+      - name: Run Tests
+        run: npm test  # Example for Node.js projects
+
+      # Step 4: Configure Pages
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Upload artifact
+
+      # Step 5: Upload artifact
+      - name: Upload Artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
           path: '.'
-      - name: Deploy to GitHub Pages
+
+      # Step 6: Deploy to GitHub Pages
+      - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v2
+
+      # Step 7: Notify deployment status
+      - name: Notify Status
+        if: success()
+        run: echo "Deployment successful!"  # Replace with your notification method
